Bug 148397 - Crash on font features dialog opening with EB Garamond
Summary: Crash on font features dialog opening with EB Garamond
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2022-04-05 13:24 UTC by bateast+documentfoundation
Modified: 2022-04-06 16:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature: https://crashreport.libreoffice.org/stats/crash_details/b529b1cd-f541-4fd4-a0b5-c1b14e3f5170


Attachments
WinDbg stack trace with Symbols (27.10 KB, text/plain)
2022-04-05 15:17 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bateast+documentfoundation 2022-04-05 13:24:30 UTC
Using EB Garamond 12 font, opening font features dialog lead to Writer crash.

http://www.georgduffner.at/ebgaramond/ (EBGaramond12-Regular.ttf)

1. select some text
2. Right click, select Character → [Charaters…]
3. Set [Font]: Familiy to "EB Garamond 12"
 (need having it installed on the system…)
4. Select [Features…]

Crash happens here.
Comment 1 Xisco Faulí 2022-04-05 14:24:36 UTC
Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d25b300c491901f745a203955aca2a524208ad64
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2022-04-05 14:29:29 UTC
Not reproduced in

Version: 6.4.0.0.alpha1+
Build ID: 9bc848cf0d301aa57eabcffa101a1cf87bad6470
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: es-ES (es_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2022-04-05 14:36:10 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5afdcad4c0e7850b18996c549892b9360cd8973f

author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-02 16:06:05 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-08-03 12:18:15 +0200
commit 5afdcad4c0e7850b18996c549892b9360cd8973f (patch)
tree 53bd3997d044fdf869ae4643855eef722682983e
parent 39d364958447cd33a6e30dc9d2904ad94fd40aba (diff)
Pass context and resource string down to boost::locale separately

Bisected with: bibisect-linux64-7.3

Adding Cc: to Noel Grandin
Comment 4 V Stuart Foote 2022-04-05 15:17:15 UTC
Created attachment 179326 [details]
WinDbg stack trace with Symbols

confirm the crash, backtrace attached. Looks like its hitting an unhandled OTF/Graphite  feature in building EB Garamond's table.

Version: 7.3.2.2 (x64) / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

and also with current master, with EB Garamond 12 (EBGaramond12-Regular.otf, ver 0.016)
Comment 5 Julien Nabet 2022-04-05 20:13:27 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/132590
Comment 6 Commit Notification 2022-04-05 21:45:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad3d2d1bc7e07f79a26841d89a85e94999a7c8ca

tdf#148397: Crash on font features dialog opening with EB Garamond

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-04-06 09:20:48 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a6b7356fbf49e07428262fa0b510d8d4c03eadd0

tdf#148397: Crash on font features dialog opening with EB Garamond

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.